[package]
name = "os_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9"
volatile = "0.3"
lazy_static = { version = "1.5", features = ["spin_no_std"] }
spin = "0.9.8"
x86_64 = "0.15.2"
uart_16550 = "0.3.2"

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 10 # in seconds

[[test]]
name = "should_panic"
harness = false
